# exinc

./: .gitignore  README.md  pyproject.toml  setup.py
exinc/: __init__.py  default_config.py  optimizer.py  preprocessor.py  tool.py
expand/: preprocessor.py  tool.py
